drm: Add CRTC selector for FBDev access support
The CRT controller which can be accessed as FBDev is chosen.
When this option is disabled, chooses the maximum resolution
of CRTCs and fixes the VSYNC wait in CRTC0.

Signed-off-by: Koji Matsuoka <koji.matsuoka.xm@renesas.com>

--- a/drivers/gpu/drm/Kconfig
+++ b/drivers/gpu/drm/Kconfig
@@ -172,6 +172,13 @@ config DRM_ADV7511
 	select REGMAP_I2C
 	select HDMI
 
+config DRM_FBDEV_CRTC
+	int "Select FBDev CRTC"
+	depends on DRM_KMS_HELPER
+	help
+	  Choose this option if you want to select CRTC of
+	  fbdev access.
+
 source "drivers/gpu/drm/exynos/Kconfig"
 
 source "drivers/gpu/drm/vmwgfx/Kconfig"
