drm: Fix CRTC selector for FBDev access support
The function to enable and the function to choose of
FBDev's CRTC are separated into other entries.

Signed-off-by: Koji Matsuoka <koji.matsuoka.xm@renesas.com>

--- a/drivers/gpu/drm/Kconfig
+++ b/drivers/gpu/drm/Kconfig
@@ -182,10 +182,21 @@ config DRM_ADV7511_DVI_OUTPUT
 	If you want to use HDMI mode, you select n.
 
 config DRM_FBDEV_CRTC
-	int "Select FBDev CRTC"
+	bool "Enable FBDev CRTC select"
 	depends on DRM_KMS_HELPER
 	help
+	  Choose this option if you want to use fbdev access
+	  every CRTC.
+	  If you want to use FBDev every CRTC, you select y.
+	  If you want to not use FBDev every CRTC, you select n.
+
+config DRM_FBDEV_CRTC_NUM
+	int "FBDev CRTC number"
+	depends on DRM_FBDEV_CRTC
+	help
 	  Choose this option if you want to select CRTC of
+	  fbdev access.
+	  Selected number of CRTC set as CRTC which can use
 	  fbdev access.
 
 source "drivers/gpu/drm/exynos/Kconfig"
