tizen: modify configuration for tizen boot
Signed-off-by: Gaku Inami <gaku.inami.xw@bp.renesas.com>

--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -1835,6 +1835,7 @@ source "mm/Kconfig"
 config FORCE_MAX_ZONEORDER
 	int "Maximum zone order" if ARCH_SHMOBILE_LEGACY
 	range 11 64 if ARCH_SHMOBILE_LEGACY
+	range 14 64 if ARCH_SHMOBILE_MULTI
 	default "12" if SOC_AM33XX
 	default "9" if SA1111 || ARCH_EFM32
 	default "11"
