--- a/arch/arm/configs/shmobile_defconfig
+++ b/arch/arm/configs/shmobile_defconfig
@@ -209,3 +209,4 @@ CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_THERMAL=y
 CONFIG_GENERIC_CPUFREQ_CPU0=y
 CONFIG_REGULATOR_DA9210=y
+CONFIG_CGROUPS=y
