Add the r8196 driver (for RTL8111/8168 on NUCs)
Realtek RTL8111/8168 is the network adapter found on devices
such as the Intel NUC DE8314TYKE. Having the driver permits
using a wired network connection with such a device.

Change-Id: I4374b8e003e55817fb625272f029d0eef98f1609
Signed-off-by: Manuel Bachmann <manuel.bachmann@open.eurogiciel.org>

--- a/arch/x86/configs/ivi_defconfig
+++ b/arch/x86/configs/ivi_defconfig
@@ -402,6 +402,7 @@ CONFIG_PCH_GBE=m
 # CONFIG_NET_VENDOR_QLOGIC is not set
 CONFIG_8139CP=m
 CONFIG_8139TOO=m
+CONFIG_R8169=m
 # CONFIG_NET_VENDOR_RDC is not set
 # CONFIG_NET_VENDOR_SEEQ is not set
 # CONFIG_NET_VENDOR_SILAN is not set
